# compiladores

./: README.md
analisador_lexer_sintatico/: Makefile  arquivo_teste.gn  arquivo_teste_completo.g  arquivo_teste_erro_comentario.gn  goianinha.l  goianinha.y  main_compiler.c  modulo_analisador_semantico.c  modulo_analisador_semantico.h  modulo_arvore_sintatica_abstrata.c  modulo_arvore_sintatica_abstrata.h  modulo_gerador_codigo.c  modulo_gerador_codigo.h  saida.s
analisador_lexer_sintatico/geracaoCodigo/__MACOSX/geracaoCodigo/Corretos/: ._NotaEmConceito.g  ._SeqOrdenada.g
analisador_lexer_sintatico/semantico/__MACOSX/semantico/Corretos/: ._fatorialCorreto.g  ._variaveisGlobaisVariaveisFuncoesCorreto.g
analisador_lexer_sintatico/semantico/__MACOSX/semantico/Errados/: ._FibEfatVersao2ErroAtribuicaoVarDeTipoDiferenteDaExpressaoLin22.g  ._FuncSomaErroParamDeChamaaDifDoParamFormalLin10.g  ._fatorialErroLin3NomeDeclaradoNoMesmoEscopo.g  ._fatorialErroLin5TipoRetornado.g  ._semantico_fatorialErroLin4TipoRetornado.g
analisador_lexer_sintatico/sintatico/__MACOSX/sintatico/Corretos/: ._FibEfatCorreto.g  ._NotaEmConceito.g  ._SeqOrdenada.g  ._expressao1Correto.g  ._fatorialCorreto.g
analisador_lexer_sintatico/sintatico/__MACOSX/sintatico/Errados/: ._FibEfatErroBlocoEnquantoNaoTerminaLin30.g  ._NotaEmConceitoErroSenaoSemSeLin25.g  ._erroLin6AsteriscoAmais.g  ._erroLin6Caractereinvalido.g  ._expressao1ErroLin4CadeiaNaoTermina.g  ._expressao1ErroLin4PontoVirg.g  ._fatorialErroEntquantoSemExecuteLinha13.g  (+3 more)
analisador_lexer_sintatico/tabela_simbolos/: tabela_simbolos.c
(+4 files in other folders)
