programa meu_programa_de_teste {
    int a;
    int b;
    car uma_letra;

    /* Função para somar dois inteiros */
    int somar(int x, int y) {
        retorne x + y;
    }

    /* Início do programa principal */
    a = 10;
    b = 20;
    uma_letra = 'G';

    escreva("O valor de a eh: ");
    escreva(a);
    novalinha;

    escreva("O valor de uma_letra eh: ");
    escreva(uma_letra);
    novalinha;

    escreva("A soma de a e b eh: ");
    escreva(somar(a, b));
    novalinha;
}
